--- a/Workshop-components/ng-workshop-componenet/src/app/header/header.component.html
+++ b/Workshop-components/ng-workshop-componenet/src/app/header/header.component.html
@@ -3,15 +3,19 @@
         <div class="logo-wrap">
             <p class="logo"><span class="logo">SoftUni Forum</span></p>
         </div>
-        <div class="mini-navbar">
+        <div class="mini-navbar" *ngIf="!isLog">
             <ul>
                 <li>
-                    <a href="#">Login</a>
+                    <a href="#" (click)='loginHandler()'>Login</a>
                 </li>
                 <li>
                     <a href="#">Register</a>
                 </li>
             </ul>
+        </div>
+        <div class="mini-navbar" *ngIf="isLog">
+            <div>Hello [username]@localdomain.com</div>
+            <a href="#" (click)='logoutHandler()'>Logout</a>
         </div>
     </div>
     <nav>
